# member-insights-processor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_REVIEW_SUMMARY.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  PHASE2_COMPLETE.md  PHASE2_TODO.md  README.md  RESTRUCTURING_SUMMARY.md  SUPABASE_INTEGRATION.md  batch_prompt.txt  pyproject.toml  requirements.txt  setup.py  simple_upload_test.py  test_local_setup.py  test_single_contact.py  test_supabase_upload.py  test_with_env.py
.cursor/: mcp.json
.github/workflows/: ci.yml  deploy.yml  lint.yml  test.yml
config/: config.yaml  eni_types_output.csv  processing_filters.yaml  supabase_schema.sql
config/files/: contact_ids.sql
config/system_prompts/: insight_generation.md  member_summary.md  structured_insight.md
context/: Member Insights Summary.md  README.md
context/airtable_affiliations/: default.md
context/airtable_deals_sourced/: default.md
context/airtable_notes/: default.md  intro_preferences.md  investing_preferences.md
context/member_requests/: requested.md  responded.md  suggested.md
context/pipedrive_notes/: default.md
context/recurroo/: asset_class.md  biography.md  sector.md  social.md
context/whatsapp_messages/: _chat.md  ai_ml.md  art_art_investing.md  bay_area.md  bikes_boats_planes_cars.md  blockchain.md  boston.md  canada.md  caribbean_latam.md  chicago.md  dc_dmv.md  estate_tax_planning.md  europe.md  florida.md  gadgets_devices_gizmos.md  golf.md  hamptons.md  health_hackers.md  home_vacation_swap.md  israel_regional.md  israel_support.md  job_board.md  los_angeles.md  market_reactions.md  motorcycle_enthusiasts.md  needs_leads.md  nyc.md  nyc_poker.md  nyc_tennis_padel.md  parenting.md  philanthropy.md  puerto_rico.md  real_estate.md  recommended_reading.md  skiing_snowboarding.md  texas.md  travel.md  travel_ideas.md  venture.md  watches.md  (+2 more)
docs/: CLAUDE.md  ONBOARDING.md  README.md  SUPABASE_INTEGRATION.md
logs/: airtable_sync_report_20250803_231242.json  context_preview_CNT-HvA002554_20250812_174244.md  context_preview_CNT-HvA002554_20250812_174709.md  context_preview_CNT-HvA002554_20250812_180343.md  context_preview_CNT-HvA002554_20250812_195133.md  context_preview_CNT-HvA002554_20250813_101745.md  context_preview_CNT-HvA002554_20250813_105038.md  context_preview_CNT-HvA002554_20250813_111040.md  context_preview_CNT-HvA002554_20250813_112801.md  context_preview_CNT-HvA002554_20250813_115415.md  context_preview_CNT-HvA002554_20250813_132458.md  context_preview_CNT-HvA002554_20250814_143749.md  processed_records.json
logs/llm_traces/: llm_trace_CNT-8Mr002238_20250813_141004.md  llm_trace_CNT-FMj006943_20250815_140024.md  llm_trace_CNT-FMj006943_20250815_140814.md  llm_trace_CNT-XKy006281_20250813_124116.md  llm_trace_CNT-ZHS002429_20250813_150512.md  llm_trace_CNT-ZHS002429_20250815_103350.md  llm_trace_CNT-ZHS002429_20250815_130259.md  llm_trace_CNT-ZHS002429_20250815_130856.md  llm_trace_CNT-gb7002478_20250813_141446.md  llm_trace_CNT-gb7002478_20250813_144455.md  llm_trace_CNT-gb7002478_20250815_131524.md  llm_trace_CNT-gb7002478_20250815_132848.md  llm_trace_CNT-iVM002453_20250813_132618.md  llm_trace_CNT-iVM002453_20250813_134402.md  llm_trace_CNT-iVM002453_20250813_141258.md  llm_trace_CNT-k7g002462_20250813_113757.md  llm_trace_CNT-k7g002462_20250815_133454.md  llm_trace_CNT-zS0002252_20250815_153141.md
output/member_summaries/: CNT-7if002332_ENI-TEST-001.md  CNT-c9M007641_ENI-02718822162856553688.md  CNT-c9M007641_ENI-03647041356388963353.md  CNT-c9M007641_ENI-0421921989327972304.md  CNT-c9M007641_ENI-05883655826784470444.md  CNT-c9M007641_ENI-62668947782937195.md  CNT-c9M007641_ENI-8559993876917815106.md
output/structured_insights/: CNT-8Mr002238_COMBINED-airtable_affiliations-null-CNT-8Mr002238-7ENI.json  CNT-8Mr002238_COMBINED-airtable_deals_sourced-null-CNT-8Mr002238-3ENI.json  CNT-8Mr002238_COMBINED-airtable_notes-intro_preferences-CNT-8Mr002238-4ENI.json  (+96 more)
scripts/: airtable_sync_insights.py  extract_service_account.py  run_processing_filters_test.py  setup_env_example.sh  setup_supabase.py
src/: __init__.py  main.py
src/utils/: claims.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_airtable_sync.py  test_context_preview.py  test_gcs_trace_write.py  test_main_integration.py  test_null_handling.py  test_processing_filter.py  test_runner.py  test_structured_insights.py  test_supabase_integration.py  test_supabase_setup.py
(+71 files in other folders)
